--- a/main/index.html
+++ b/main/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-    <div class="head"></div>
+    <div class="head">
+        <div class="title"><h1>学习站点|ZYX</h1></div>
+    </div>
     <div class="body">
         <div class="nav">
             <ul>
