--- a/main/index.html
+++ b/main/index.html
@@ -13,12 +13,16 @@
         <div class="title"><h1>学习站点|ZYX</h1></div>
     </div>
     <div class="body">
-        <div class="nav">
+
+        <!-- 导航 -->
+        <div class="nav"> 
             <ul>
                 <li class="nav-list">
                     <h2>笔记</h2>
                 </li>
             </ul>
+
+            <!-- Python -->
             <ul>
                 <li class="nav-list">
                     <h2>Python
@@ -30,6 +34,8 @@
                     </div>
                 </li>
             </ul>
+
+            <!-- web 前端 -->
             <ul>
                 <li class="nav-list">
                     <h2>web 前端
@@ -42,6 +48,20 @@
                     </div>
                 </li>
             </ul>
+
+            <!-- 教资 -->
+            <ul>
+                <li class="nav-list">
+                    <h2>教资（高中）
+                        <i></i>
+                    </h2>
+                    <div class="hide" id="">
+                        <a href="teacher.html" target="_self"><h5>教育知识与能力</h5></a>
+                    </div>
+                </li>
+            </ul>
+
+
         </div>
     </div> 
 
