--- a/main/teacher.html
+++ b/main/teacher.html
@@ -30,7 +30,7 @@
                     </h2>
                     <div class="hide" id="">
                         <!-- 添加二级标题 -->
-                        <a href="..\teacher\HTML文件\教育知识与能力.html" target="view"><h5>教育知识与能力</h5></a>
+                        <a href="..\teacher\HTML文件\教育基础知识和基本原理.html" target="view"><h5>教育基础知识和基本原理</h5></a>
                     </div>
                 </li>
             </ul>
