--- a/main/index.html
+++ b/main/index.html
@@ -44,7 +44,7 @@
                     <div class="hide" id="">
                         <a href="" target="_self"><h5>HTML</h5></a>
                         <a href="" target="_self"><h5>CSS</h5></a>
-                        <a href="JavaScript.html" target="_self"><h5>JavaScript</h5></a>
+                        <a href="html\JavaScript.html" target="_self"><h5>JavaScript</h5></a>
                     </div>
                 </li>
             </ul>
@@ -56,7 +56,7 @@
                         <i></i>
                     </h2>
                     <div class="hide" id="">
-                        <a href="teacher.html" target="_self"><h5>教育知识与能力</h5></a>
+                        <a href="html\teacher.html" target="_self"><h5>教育知识与能力</h5></a>
                     </div>
                 </li>
             </ul>
