--- a/main/html/teacher.html
+++ b/main/html/teacher.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="resource\index.css">
-    <link rel="stylesheet" type="text/css" href="resource\nav.css">
-    <title>JavaScript</title>
+    <link rel="stylesheet" type="text/css" href="..\resource\index.css">
+    <link rel="stylesheet" type="text/css" href="..\resource\nav.css">
+    <title>教资</title>
 </head>
 <body>
     
     <div class="head">
-        <div class="return"><a href="index.html">首页</a></div>
+        <div class="return"><a href="..\index.html">首页</a></div>
         <div class="title"><h1>学习站点|ZYX</h1></div>
         
     </div>
@@ -18,19 +18,19 @@
         <div class="nav">
             <ul>
                 <li class="nav-list">
-                    <h2>JavaScript</h2>
+                    <h2>教资</h2>
                 </li>
             </ul>
 
             <!-- 添加导航 -->
             <ul>
                 <li class="nav-list">
-                    <h2>DOM操作
+                    <h2>教育知识与能力
                         <i></i>
                     </h2>
                     <div class="hide" id="">
                         <!-- 添加二级标题 -->
-                        <a href="..\JavaScript\HTML文件\JavaScript事件处理.html" target="view"><h5>JavaScript事件处理</h5></a>
+                        <a href="..\..\teacher\HTML文件\教育基础知识和基本原理.html" target="view"><h5>教育基础知识和基本原理</h5></a>
                     </div>
                 </li>
             </ul>
@@ -41,6 +41,6 @@
         <iframe frameborder="0" name="view" ></iframe>
 
     </div>
-        <script type="text/javascript" src="resource\nav.js"></script>
+        <script type="text/javascript" src="..\resource\nav.js"></script>
 </body>
 </html>
