--- a/main/index.html
+++ b/main/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="head">
-        <div class="title"><h1>学习站点|ZYX</h1></div>
+        <div class="title"><h1>知识小站|BY zyx</h1></div>
     </div>
     <div class="body">
 
