--- a/main/index.html
+++ b/main/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="resource\index.css">
     <link rel="stylesheet" type="text/css" href="resource\nav.css">
-    <title>学习站点|ZYX</title>
+    <title>知识小站|BY zyx</title>
 </head>
 
 <body>
