--- a/main/html/teacher.html
+++ b/main/html/teacher.html
@@ -30,7 +30,9 @@
                     </h2>
                     <div class="hide" id="">
                         <!-- 添加二级标题 -->
-                        <a href="..\..\teacher\HTML文件\教育基础知识和基本原理.html" target="view"><h5>教育基础知识和基本原理</h5></a>
+                        <a href="..\..\教育知识与能力\HTML文件\教育基础知识和基本原理.html" target="view"><h5>教育基础知识和基本原理</h5></a>
+                        <a href="..\..\教育知识与能力\HTML文件\辨析题.html" target="view"><h5>辨析题</h5></a>
+                        <a href="..\..\教育知识与能力\HTML文件\简答题.html" target="view"><h5>简答题</h5></a>
                     </div>
                 </li>
             </ul>
