--- a/main/index.html
+++ b/main/index.html
@@ -56,7 +56,7 @@
                         <i></i>
                     </h2>
                     <div class="hide" id="">
-                        <a href="html\teacher.html" target="_self"><h5>教育知识与能力</h5></a>
+                        <a href="html\education.html" target="_self"><h5>教育知识与能力</h5></a>
                     </div>
                 </li>
             </ul>
