--- a/main/html/education.html
+++ b/main/html/education.html
@@ -18,21 +18,32 @@
         <div class="nav">
             <ul>
                 <li class="nav-list">
-                    <h2>教资</h2>
+                    <h2>教育知识与能力</h2>
                 </li>
             </ul>
 
             <!-- 添加导航 -->
             <ul>
                 <li class="nav-list">
-                    <h2>教育知识与能力
+                    <h2>教育基础知识和基本原理
                         <i></i>
                     </h2>
                     <div class="hide" id="">
                         <!-- 添加二级标题 -->
-                        <a href="..\..\教育知识与能力\HTML文件\教育基础知识和基本原理.html" target="view"><h5>教育基础知识和基本原理</h5></a>
-                        <a href="..\..\教育知识与能力\HTML文件\辨析题.html" target="view"><h5>辨析题</h5></a>
-                        <a href="..\..\教育知识与能力\HTML文件\简答题.html" target="view"><h5>简答题</h5></a>
+                        <a href="..\..\education\HTML文件\教育的产生与发展.html" target="view"><h5>教育的产生与发展</h5></a>
+                    </div>
+                </li>
+            </ul>
+
+            <ul>
+                <li class="nav-list">
+                    <h2>例题
+                        <i></i>
+                    </h2>
+                    <div class="hide" id="">
+                        <!-- 添加二级标题 -->
+                        <a href="..\..\education\HTML文件\辨析题.html" target="view"><h5>辨析题</h5></a>
+                        <a href="..\..\education\HTML文件\简答题.html" target="view"><h5>简答题</h5></a>
                     </div>
                 </li>
             </ul>
