--- a/main/index.html
+++ b/main/index.html
@@ -63,6 +63,9 @@
 
 
         </div>
+
+        <iframe src="https://www.baidu.com" frameborder="0" name="view" ></iframe>
+
     </div> 
 
     <script type="text/javascript" src="resource\nav.js"></script>
