--- a/main/html/education.html
+++ b/main/html/education.html
@@ -31,7 +31,7 @@
                     <div class="hide" id="">
                         <!-- 添加二级标题 -->
                         <a href="..\..\education\HTML文件\教育的产生与发展.html" target="view"><h5>教育的产生与发展</h5></a>
-                        <a href="..\..\education\HTML文件\教育学的产生与发展.html" target="view"><h5>教育的产生与发展</h5></a>
+                        <a href="..\..\education\HTML文件\教育学的产生与发展.html" target="view"><h5>教育学的产生与发展</h5></a>
                     </div>
                 </li>
             </ul>
