--- a/main/html/education.html
+++ b/main/html/education.html
@@ -32,6 +32,7 @@
                         <!-- 添加二级标题 -->
                         <a href="..\..\education\HTML文件\教育的产生与发展.html" target="view"><h5>教育的产生与发展</h5></a>
                         <a href="..\..\education\HTML文件\教育学的产生与发展.html" target="view"><h5>教育学的产生与发展</h5></a>
+                        <a href="..\..\education\HTML文件\教育与社会的发展.html" target="view"><h5>教育与社会的发展</h5></a>
                     </div>
                 </li>
             </ul>
