--- a/main/index.html
+++ b/main/index.html
@@ -29,8 +29,8 @@
                         <i></i>
                     </h2>
                     <div class="hide" id="">
-                        <a href="" target="_self"><h5>Python基础</h5></a>
-                        <a href="" target="_self"><h5>Python爬虫</h5></a>
+                        <!-- <a href="" target="_self"><h5>Python基础</h5></a>
+                        <a href="" target="_self"><h5>Python爬虫</h5></a> -->
                     </div>
                 </li>
             </ul>
@@ -42,8 +42,8 @@
                         <i></i>
                     </h2>
                     <div class="hide" id="">
-                        <a href="" target="_self"><h5>HTML</h5></a>
-                        <a href="" target="_self"><h5>CSS</h5></a>
+                        <!-- <a href="" target="_self"><h5>HTML</h5></a> -->
+                        <a href="html\css.html" target="_self"><h5>CSS</h5></a>
                         <a href="html\JavaScript.html" target="_self"><h5>JavaScript</h5></a>
                     </div>
                 </li>
