--- a/main/html/css.html
+++ b/main/html/css.html
@@ -30,7 +30,7 @@
                     </h2>
                     <div class="hide" id="">
                         <!-- 添加二级标题 -->
-                        <a href="..\..\CSS\html\css_basics\CSS教程.html" target="view"><h5>CSS教程</h5></a>
+                        <a href="..\..\CSS\html\css_basics\CSS基础.html" target="view"><h5>CSS基础</h5></a>
                     </div>
                 </li>
             </ul>
