--- a/main/html/css.html
+++ b/main/html/css.html
@@ -31,6 +31,7 @@
                     <div class="hide" id="">
                         <!-- 添加二级标题 -->
                         <a href="..\..\CSS\html\css_basics\CSS基础.html" target="view"><h5>CSS基础</h5></a>
+                        <a href="..\..\CSS\html\css_basics\CSS选择器.html" target="view"><h5>CSS选择器</h5></a>
                     </div>
                 </li>
             </ul>
