--- a/main/html/css.html
+++ b/main/html/css.html
@@ -36,6 +36,19 @@
                 </li>
             </ul>
 
+            <ul>
+                <li class="nav-list">
+                    <h2>CSS样式
+                        <i></i>
+                    </h2>
+                    <div class="hide" id="">
+                        <!-- 添加二级标题 -->
+                        <a href="..\..\CSS\html\css_style\CSS背景.html" target="view"><h5>CSS背景/h5></a>
+                    </div>
+                </li>
+            </ul>
+
+
 
         </div>
 
