--- a/main/html/css.html
+++ b/main/html/css.html
@@ -43,7 +43,7 @@
                     </h2>
                     <div class="hide" id="">
                         <!-- 添加二级标题 -->
-                        <a href="..\..\CSS\html\css_style\CSS背景.html" target="view"><h5>CSS背景/h5></a>
+                        <a href="..\..\CSS\html\css_style\CSS背景.html" target="view"><h5>CSS背景</h5></a>
                     </div>
                 </li>
             </ul>
