--- a/main/html/education.html
+++ b/main/html/education.html
@@ -36,6 +36,7 @@
                         <a href="..\..\education\HTML文件\教育与人的发展.html" target="view"><h5>教育与人的发展</h5></a>
                         <a href="..\..\education\HTML文件\教育制度.html" target="view"><h5>教育制度</h5></a>
                         <a href="..\..\education\HTML文件\教育目的.html" target="view"><h5>教育目的</h5></a>
+                        <a href="..\..\education\HTML文件\教育研究的基本方法.html" target="view"><h5>教育研究的基本方法</h5></a>
                     </div>
                 </li>
             </ul>
