--- a/main/html/css.html
+++ b/main/html/css.html
@@ -44,6 +44,10 @@
                     <div class="hide" id="">
                         <!-- 添加二级标题 -->
                         <a href="..\..\CSS\html\css_style\CSS背景.html" target="view"><h5>CSS 背景</h5></a>
+                        <a href="..\..\CSS\html\css_style\CSS文本.html" target="view"><h5>CSS 文本</h5></a>
+                        <a href="..\..\CSS\html\css_style\CSS字体.html" target="view"><h5>CSS 字体</h5></a>
+                        <a href="..\..\CSS\html\css_style\CSS链接.html" target="view"><h5>CSS 链接</h5></a>
+                        <a href="..\..\CSS\html\css_style\CSS列表.html" target="view"><h5>CSS 列表</h5></a>
                     </div>
                 </li>
             </ul>
