--- a/main/html/css.html
+++ b/main/html/css.html
@@ -48,10 +48,23 @@
                         <a href="..\..\CSS\html\css_style\CSS字体.html" target="view"><h5>CSS 字体</h5></a>
                         <a href="..\..\CSS\html\css_style\CSS链接.html" target="view"><h5>CSS 链接</h5></a>
                         <a href="..\..\CSS\html\css_style\CSS列表.html" target="view"><h5>CSS 列表</h5></a>
+                        <a href="..\..\CSS\html\css_style\CSS表格.html" target="view"><h5>CSS 表格</h5></a>
+                        <a href="..\..\CSS\html\css_style\CSS轮廓.html" target="view"><h5>CSS 轮廓</h5></a>
                     </div>
                 </li>
             </ul>
 
+            <ul>
+                <li class="nav-list">
+                    <h2>CSS 框模型
+                        <i></i>
+                    </h2>
+                    <div class="hide" id="">
+                        <!-- 添加二级标题 -->
+                        <!-- <a href="..\..\CSS\html\css_style\CSS背景.html" target="view"><h5>CSS 背景</h5></a> -->
+                    </div>
+                </li>
+            </ul>
 
 
         </div>
