--- a/main/index.html
+++ b/main/index.html
@@ -49,6 +49,18 @@
                 </li>
             </ul>
 
+            <!-- 信息安全 -->
+            <ul>
+                <li class="nav-list">
+                    <h2>信息安全
+                        <i></i>
+                    </h2>
+                    <div class="hide" id="">
+                        <a href="html\safety.html" target="_self"><h5>信息安全工程师</h5></a>
+                    </div>
+                </li>
+            </ul>
+
             <!-- 教资 -->
             <ul>
                 <li class="nav-list">
