--- a/main/html/safety.html
+++ b/main/html/safety.html
@@ -30,7 +30,7 @@
                     </h2>
                     <div class="hide" id="">
                         <!-- 添加二级标题 -->
-                        <!-- <a href="..\..\JavaScript\HTML文件\JavaScript事件处理.html" target="view"><h5> 事件处理</h5></a> -->
+                        <a href="..\..\信息安全工程师\html\1.1 信息安全研究方向.html" target="view"><h5>1.1 信息安全研究方向</h5></a>
                     </div>
                 </li>
             </ul>
