--- a/main/html/education.html
+++ b/main/html/education.html
@@ -14,7 +14,7 @@
         <div class="title"><h1>知识小站|BY zyx</h1></div>
         
     </div>
-    <div class="body">
+    <div class="bodys">
         <div class="nav">
             <ul>
                 <li class="nav-list">
