--- a/main/index.html
+++ b/main/index.html
@@ -12,7 +12,7 @@
     <div class="head">
         <div class="title"><h1>知识小站|BY zyx</h1></div>
     </div>
-    <div class="body">
+    <div class="bodys">
 
         <!-- 导航 -->
         <div class="nav"> 
