--- a/main/html/css.html
+++ b/main/html/css.html
@@ -14,8 +14,8 @@
         <div class="title"><h1>知识小站|BY zyx</h1></div>
         
     </div>
-    <div class="bodys">
-        <div class="nav">
+
+    <div class="nav">
             <ul>
                 <li class="nav-list">
                     <h2>CSS</h2>
@@ -83,11 +83,11 @@
             </ul>
 
 
-        </div>
-
-        <iframe frameborder="0" name="view" ></iframe>
-
     </div>
+
+    <iframe src="" frameborder="0" name="view" ></iframe>
+
         <script type="text/javascript" src="..\resource\nav.js"></script>
+
 </body>
 </html>
