--- a/main/html/css.html
+++ b/main/html/css.html
@@ -77,11 +77,25 @@
                     </h2>
                     <div class="hide" id="">
                         <!-- 添加二级标题 -->
-                        <!-- <a href="..\..\CSS\html\box\CSS框模型概述.html" target="view"><h5>CSS 框模型概述</h5></a> -->
+                        <a href="..\..\CSS\html\positioning\CSS定位概述.html" target="view"><h5>CSS 定位概述</h5></a>
+                        <a href="..\..\CSS\html\positioning\CSS绝对定位.html" target="view"><h5>CSS 绝对定位</h5></a>
+                        <a href="..\..\CSS\html\positioning\CSS相对定位.html" target="view"><h5>CSS 相对定位</h5></a>
+                        <a href="..\..\CSS\html\positioning\CSS浮动.html" target="view"><h5>CSS 浮动</h5></a>
                     </div>
                 </li>
             </ul>
 
+            <ul>
+                <li class="nav-list">
+                    <h2>CSS 选择器
+                        <i></i>
+                    </h2>
+                    <div class="hide" id="">
+                        <!-- 添加二级标题 -->
+                        <!-- <a href="..\..\CSS\html\positioning\CSS定位概述.html" target="view"><h5>CSS 定位概述</h5></a> -->
+                    </div>
+                </li>
+            </ul>
 
     </div>
 
