--- a/main/html/safety.html
+++ b/main/html/safety.html
@@ -34,6 +34,8 @@
                         <a href="..\..\信息安全工程师\html\1.2 信息安全理论基础.html" target="view"><h5>1.2 信息安全理论基础</h5></a>
                         <a href="..\..\信息安全工程师\html\1.3 信息安全方法论.html" target="view"><h5>1.3 信息安全方法论</h5></a>
                         <a href="..\..\信息安全工程师\html\1.4 信息系统安全层次.html" target="view"><h5>1.4 信息系统安全层次</h5></a>
+                        <a href="..\..\信息安全工程师\html\1.5 信息安全管理.html" target="view"><h5>1.5 信息安全管理</h5></a>
+                        <a href="..\..\信息安全工程师\html\1.6 ISO 安全体系结构.html" target="view"><h5>1.6 ISO 安全体系结构</h5></a>
                     </div>
                 </li>
             </ul>
