--- a/main/html/css.html
+++ b/main/html/css.html
@@ -30,8 +30,7 @@
                     </h2>
                     <div class="hide" id="">
                         <!-- 添加二级标题 -->
-                        <a href="..\..\CSS\html\css_basics\CSS基础.html" target="view"><h5>CSS 基础</h5></a>
-                        <a href="..\..\CSS\html\css_basics\CSS选择器.html" target="view"><h5>CSS 选择器</h5></a>
+                        <a href="..\..\CSS\html\css_basics\CSS创建.html" target="view"><h5>CSS 创建</h5></a>
                     </div>
                 </li>
             </ul>
@@ -92,7 +91,14 @@
                     </h2>
                     <div class="hide" id="">
                         <!-- 添加二级标题 -->
-                        <!-- <a href="..\..\CSS\html\positioning\CSS定位概述.html" target="view"><h5>CSS 定位概述</h5></a> -->
+                        <a href="..\..\CSS\html\selector\CSS元素选择器.html" target="view"><h5>CSS 元素选择器</h5></a>
+                        <a href="..\..\CSS\html\selector\CSS选择器分组.html" target="view"><h5>CSS 选择器分组/h5></a>
+                        <a href="..\..\CSS\html\selector\CSS类选择器.html" target="view"><h5>CSS 类选择器</h5></a>
+                        <a href="..\..\CSS\html\selector\CSS ID选择器.html" target="view"><h5>CSS ID选择器</h5></a>
+                        <a href="..\..\CSS\html\selector\CSS属性选择器.html" target="view"><h5>CSS 属性选择器</h5></a>
+                        <a href="..\..\CSS\html\selector\CSS后代选择器.html" target="view"><h5>CSS 后代选择器</h5></a>
+                        <a href="..\..\CSS\html\selector\CSS子元素选择器.html" target="view"><h5>CSS 子元素选择器</h5></a>
+                        <a href="..\..\CSS\html\selector\CSS相邻兄弟选择器.html" target="view"><h5>CSS 相邻兄弟选择器</h5></a>
                     </div>
                 </li>
             </ul>
