--- a/main/html/css.html
+++ b/main/html/css.html
@@ -92,7 +92,7 @@
                     <div class="hide" id="">
                         <!-- 添加二级标题 -->
                         <a href="..\..\CSS\html\selector\CSS元素选择器.html" target="view"><h5>CSS 元素选择器</h5></a>
-                        <a href="..\..\CSS\html\selector\CSS选择器分组.html" target="view"><h5>CSS 选择器分组/h5></a>
+                        <a href="..\..\CSS\html\selector\CSS选择器分组.html" target="view"><h5>CSS 选择器分组</h5></a>
                         <a href="..\..\CSS\html\selector\CSS类选择器.html" target="view"><h5>CSS 类选择器</h5></a>
                         <a href="..\..\CSS\html\selector\CSS ID选择器.html" target="view"><h5>CSS ID选择器</h5></a>
                         <a href="..\..\CSS\html\selector\CSS属性选择器.html" target="view"><h5>CSS 属性选择器</h5></a>
