--- a/main/html/css.html
+++ b/main/html/css.html
@@ -99,6 +99,20 @@
                         <a href="..\..\CSS\html\selector\CSS后代选择器.html" target="view"><h5>CSS 后代选择器</h5></a>
                         <a href="..\..\CSS\html\selector\CSS子元素选择器.html" target="view"><h5>CSS 子元素选择器</h5></a>
                         <a href="..\..\CSS\html\selector\CSS相邻兄弟选择器.html" target="view"><h5>CSS 相邻兄弟选择器</h5></a>
+                        <a href="..\..\CSS\html\selector\CSS伪类.html" target="view"><h5>CSS 伪类</h5></a>
+                        <a href="..\..\CSS\html\selector\CSS伪元素.html" target="view"><h5>CSS 伪元素</h5></a>
+                    </div>
+                </li>
+            </ul>
+
+            <ul>
+                <li class="nav-list">
+                    <h2>CSS 高级
+                        <i></i>
+                    </h2>
+                    <div class="hide" id="">
+                        <!-- 添加二级标题 -->
+                        <!-- <a href="..\..\CSS\html\selector\CSS元素选择器.html" target="view"><h5>CSS 元素选择器</h5></a> -->
                     </div>
                 </li>
             </ul>
