--- a/main/html/css.html
+++ b/main/html/css.html
@@ -112,7 +112,12 @@
                     </h2>
                     <div class="hide" id="">
                         <!-- 添加二级标题 -->
-                        <!-- <a href="..\..\CSS\html\selector\CSS元素选择器.html" target="view"><h5>CSS 元素选择器</h5></a> -->
+                        <a href="..\..\CSS\html\advanced\CSS水平对齐.html" target="view"><h5>CSS 水平对齐</h5></a>
+                        <a href="..\..\CSS\html\advanced\CSS尺寸.html" target="view"><h5>CSS 尺寸</h5></a>
+                        <a href="..\..\CSS\html\advanced\CSS分类.html" target="view"><h5>CSS 分类</h5></a>
+                        <a href="..\..\CSS\html\advanced\CSS导航栏.html" target="view"><h5>CSS 导航栏</h5></a>
+                        <a href="..\..\CSS\html\advanced\CSS图像透明度.html" target="view"><h5>CSS 图像</h5></a>
+                        <a href="..\..\CSS\html\advanced\CSS2媒介类型.html" target="view"><h5>CSS 媒介类型</h5></a>
                     </div>
                 </li>
             </ul>
