--- a/main/html/education.html
+++ b/main/html/education.html
@@ -22,7 +22,7 @@
                 </li>
             </ul>
 
-            <!-- 添加导航 -->
+            <!-- 教育基础知识和基本原理导航 -->
             <ul>
                 <li class="nav-list">
                     <h2>教育基础知识和基本原理
@@ -41,6 +41,36 @@
                 </li>
             </ul>
 
+            <!-- 中学课程导航 -->
+            <ul>
+                <li class="nav-list">
+                    <h2>教育基础知识和基本原理
+                        <i></i>
+                    </h2>
+                    <div class="hide" id="">
+                        <!-- 添加二级标题 -->
+                        <a href="..\..\education\HTML文件\中学课程\课程概述.html" target="view"><h5>课程概述</h5></a>
+                    </div>
+                </li>
+            </ul>
+
+            <!-- 重要人物导航 -->
+            <ul>
+                <li class="nav-list">
+                    <h2>重要人物及其理论观点
+                        <i></i>
+                    </h2>
+                    <div class="hide" id="">
+                        <!-- 添加二级标题 -->
+                        <a href="..\..\education\HTML文件\杜威.html" target="view"><h5>杜威</h5></a>
+                        <a href="..\..\education\HTML文件\斯宾塞.html" target="view"><h5>斯宾塞</h5></a>
+                        <a href="..\..\education\HTML文件\赫尔巴特.html" target="view"><h5>赫尔巴特</h5></a>
+                        <a href="..\..\education\HTML文件\布鲁纳.html" target="view"><h5>布鲁纳</h5></a>
+                    </div>
+                </li>
+            </ul>
+            
+             <!-- 例题导航 -->
             <ul>
                 <li class="nav-list">
                     <h2>例题
