--- a/main/html/education.html
+++ b/main/html/education.html
@@ -44,7 +44,7 @@
             <!-- 中学课程导航 -->
             <ul>
                 <li class="nav-list">
-                    <h2>教育基础知识和基本原理
+                    <h2>中学课程
                         <i></i>
                     </h2>
                     <div class="hide" id="">
