--- a/main/html/education.html
+++ b/main/html/education.html
@@ -50,6 +50,10 @@
                     <div class="hide" id="">
                         <!-- 添加二级标题 -->
                         <a href="..\..\education\HTML文件\中学课程\课程概述.html" target="view"><h5>课程概述</h5></a>
+                        <a href="..\..\education\HTML文件\中学课程\课程目标与内容.html" target="view"><h5>课程目标与内容</h5></a>
+                        <a href="..\..\education\HTML文件\中学课程\课程设计与开发.html" target="view"><h5>课程设计与开发</h5></a>
+                        <a href="..\..\education\HTML文件\中学课程\课程实施与评价.html" target="view"><h5>课程实施与评价</h5></a>
+                        <a href="..\..\education\HTML文件\中学课程\基础教育课程改革.html" target="view"><h5>基础教育课程改革</h5></a>
                     </div>
                 </li>
             </ul>
