--- a/main/html/css.html
+++ b/main/html/css.html
@@ -125,7 +125,7 @@
 
             <ul>
                 <li class="nav-list">
-                    <h2>CSS3
+                    <h2>CSS3 教程
                         <i></i>
                     </h2>
                     <div class="hide" id="">
