--- a/main/html/safety.html
+++ b/main/html/safety.html
@@ -25,17 +25,17 @@
             <!-- 添加导航 -->
             <ul>
                 <li class="nav-list">
-                    <h2>第1章 信息安全基础知识
-                        <i></i>
-                    </h2>
+                    <h2>第1章 信息安全基础知识<i></i></h2>
                     <div class="hide" id="">
                         <!-- 添加二级标题 -->
+                        <a href="..\..\信息安全工程师\html\第一章考点知识结构图.html" target="view"><h5>考点知识结构图</h5></a>
                         <a href="..\..\信息安全工程师\html\1.1 信息安全研究方向.html" target="view"><h5>1.1 信息安全研究方向</h5></a>
                         <a href="..\..\信息安全工程师\html\1.2 信息安全理论基础.html" target="view"><h5>1.2 信息安全理论基础</h5></a>
                         <a href="..\..\信息安全工程师\html\1.3 信息安全方法论.html" target="view"><h5>1.3 信息安全方法论</h5></a>
                         <a href="..\..\信息安全工程师\html\1.4 信息系统安全层次.html" target="view"><h5>1.4 信息系统安全层次</h5></a>
                         <a href="..\..\信息安全工程师\html\1.5 信息安全管理.html" target="view"><h5>1.5 信息安全管理</h5></a>
                         <a href="..\..\信息安全工程师\html\1.6 ISO 安全体系结构.html" target="view"><h5>1.6 ISO 安全体系结构</h5></a>
+                        <a href="..\..\信息安全工程师\html\1.7 信息安全风险管理.html" target="view"><h5>1.7 信息安全风险管理</h5></a>
                     </div>
                 </li>
             </ul>
