--- a/信息安全工程师/html/第一章考点知识结构图.html
+++ b/信息安全工程师/html/第一章考点知识结构图.html
@@ -523,6 +523,6 @@ header, .context-menu, .megamenu-content, footer{
 </style>
 </head>
 <body class='typora-export os-windows' >
-<div  id='write'  class = ' first-line-indent'><h1><a name="考点知识结构图" class="md-header-anchor"></a><span>考点知识结构图</span></h1><p><img src="D:\基础\Web 前端\note\GR-ZYX.github\信息安全工程师\image\信息安全基础知识.png" referrerpolicy="no-referrer"></p></div>
+<div  id='write'  class = ' first-line-indent'><h1><a name="考点知识结构图" class="md-header-anchor"></a><span>考点知识结构图</span></h1><p><img src="..\image\信息安全基础知识.png" referrerpolicy="no-referrer"></p></div>
 </body>
 </html>
