--- a/main/html/css.html
+++ b/main/html/css.html
@@ -133,6 +133,7 @@
                         <a href="..\..\CSS\html\advanced\CSS3 兼容.html" target="view"><h5>CSS3 兼容</h5></a>
                         <a href="..\..\CSS\html\advanced\CSS3 转换.html" target="view"><h5>CSS3 转换</h5></a>
                         <a href="..\..\CSS\html\advanced\CSS3 过渡.html" target="view"><h5>CSS3 过渡</h5></a>
+                        <a href="..\..\CSS\html\advanced\CSS3 渐变.html" target="view"><h5>CSS3 渐变</h5></a>
                     </div>
                 </li>
             </ul>
