--- a/index/html/education.html
+++ b/index/html/education.html
@@ -58,6 +58,21 @@
                 </li>
             </ul>
 
+            <!-- 中学教学导航 -->
+            <ul>
+                <li class="nav-list">
+                    <h2>中学教学
+                        <i></i>
+                    </h2>
+                    <div class="hide" id="">
+                        <!-- 添加二级标题 -->
+                        <a href="..\..\education\HTML文件\中学教学\教学概述.html" target="view"><h5>教学概述</h5></a>
+                        <a href="..\..\education\HTML文件\中学教学\教学过程（重点）.html" target="view"><h5>教学过程</h5></a>
+                        <a href="..\..\education\HTML文件\中学教学\教学工作的基本环节.html" target="view"><h5>教学工作的基本环节</h5></a>
+                    </div>
+                </li>
+            </ul>
+
             <!-- 重要人物导航 -->
             <ul>
                 <li class="nav-list">
