--- a/index/html/education.html
+++ b/index/html/education.html
@@ -69,6 +69,8 @@
                         <a href="..\..\education\HTML文件\中学教学\教学概述.html" target="view"><h5>教学概述</h5></a>
                         <a href="..\..\education\HTML文件\中学教学\教学过程（重点）.html" target="view"><h5>教学过程</h5></a>
                         <a href="..\..\education\HTML文件\中学教学\教学工作的基本环节.html" target="view"><h5>教学工作的基本环节</h5></a>
+                        <a href="..\..\education\HTML文件\中学教学\教学原则.html" target="view"><h5>教学原则</h5></a>
+                        <a href="..\..\education\HTML文件\中学教学\教学方法.html" target="view"><h5>教学方法</h5></a>
                     </div>
                 </li>
             </ul>
