--- a/index/html/education.html
+++ b/index/html/education.html
@@ -71,6 +71,11 @@
                         <a href="..\..\education\HTML文件\中学教学\教学工作的基本环节.html" target="view"><h5>教学工作的基本环节</h5></a>
                         <a href="..\..\education\HTML文件\中学教学\教学原则.html" target="view"><h5>教学原则</h5></a>
                         <a href="..\..\education\HTML文件\中学教学\教学方法.html" target="view"><h5>教学方法</h5></a>
+                        <a href="..\..\education\HTML文件\中学教学\教学模式.html" target="view"><h5>教学模式</h5></a>
+                        <a href="..\..\education\HTML文件\中学教学\教学组织形式.html" target="view"><h5>教学组织形式</h5></a>
+                        <a href="..\..\education\HTML文件\中学教学\教学策略.html" target="view"><h5>教学策略</h5></a>
+                        <a href="..\..\education\HTML文件\中学教学\教学评价.html" target="view"><h5>教学评价</h5></a>
+                        <a href="..\..\education\HTML文件\中学教学\我国当前的教学改革.html" target="view"><h5>我国当前的教学改革</h5></a>
                     </div>
                 </li>
             </ul>
