--- a/index/html/safety.html
+++ b/index/html/safety.html
@@ -40,6 +40,20 @@
                 </li>
             </ul>
 
+            <!-- 添加导航 -->
+            <ul>
+                <li class="nav-list">
+                    <h2>第2章 安全法规和标准<i></i></h2>
+                    <div class="hide" id="">
+                        <!-- 添加二级标题 -->
+                        <a href="..\..\信息安全工程师\html\第二章考点知识结构图.html" target="view"><h5>考点知识结构图</h5></a>
+                        <a href="..\..\信息安全工程师\html\2.1 信息安全法律法规.html" target="view"><h5>2.1 信息安全法律法规</h5></a>
+                        <a href="..\..\信息安全工程师\html\2.2 信息安全标准.html" target="view"><h5>2.2 信息安全标准</h5></a>
+
+                    </div>
+                </li>
+            </ul>
+
 
     </div>
 
