--- a/index/html/css.html
+++ b/index/html/css.html
@@ -134,7 +134,8 @@
                         <a href="..\..\CSS\html\advanced\CSS3 渐变.html" target="view"><h5>CSS3 渐变</h5></a>
                         <a href="..\..\CSS\html\advanced\CSS3 转换.html" target="view"><h5>CSS3 转换</h5></a>
                         <a href="..\..\CSS\html\advanced\CSS3 过渡.html" target="view"><h5>CSS3 过渡</h5></a>
-                        
+                        <a href="..\..\CSS\html\advanced\CSS3 动画.html" target="view"><h5>CSS3 动画</h5></a>
+                        <a href="..\..\CSS\html\advanced\CSS3 多媒体查询.html" target="view"><h5>CSS3 多媒体查询</h5></a>
                     </div>
                 </li>
             </ul>
