--- a/index/html/JavaScript.html
+++ b/index/html/JavaScript.html
@@ -25,7 +25,7 @@
             <!-- 添加导航 -->
             <ul>
                 <li class="nav-list">
-                    <h2>DOM 操作
+                    <h2>HTML DOM
                         <i></i>
                     </h2>
                     <div class="hide" id="">
