--- a/index/html/education.html
+++ b/index/html/education.html
@@ -80,6 +80,20 @@
                 </li>
             </ul>
 
+            <!-- 中学生学习心理 -->
+            <ul>
+                <li class="nav-list">
+                    <h2>中学生学习心理
+                        <i></i>
+                    </h2>
+                    <div class="hide" id="">
+                        <!-- 添加二级标题 -->
+                        <!-- <a href="..\..\education\HTML文件\中学教学\教学概述.html" target="view"><h5>教学概述</h5></a> -->
+                        
+                    </div>
+                </li>
+            </ul>
+
             <!-- 重要人物导航 -->
             <ul>
                 <li class="nav-list">
