--- a/index/html/JavaScript.html
+++ b/index/html/JavaScript.html
@@ -25,6 +25,22 @@
             <!-- 添加导航 -->
             <ul>
                 <li class="nav-list">
+                    <h2>JS 基础教程
+                        <i></i>
+                    </h2>
+                    <div class="hide" id="">
+                        <!-- 添加二级标题 -->
+                        <a href="..\..\JavaScript\HTML文件\basic\JavaScript 使用.html" target="view"><h5>JS 使用</h5></a>
+                        <a href="..\..\JavaScript\HTML文件\basic\JavaScript 输出.html" target="view"><h5>JS 使用</h5></a>
+                        <a href="..\..\JavaScript\HTML文件\basic\JavaScript 运算符.html" target="view"><h5>JS 使用</h5></a>
+                        <a href="..\..\JavaScript\HTML文件\basic\JavaScript 数据类型.html" target="view"><h5>JS 使用</h5></a>
+                    </div>
+                </li>
+            </ul>
+
+            <!-- 添加导航 -->
+            <ul>
+                <li class="nav-list">
                     <h2>HTML DOM
                         <i></i>
                     </h2>
