--- a/index/html/JavaScript.html
+++ b/index/html/JavaScript.html
@@ -31,9 +31,9 @@
                     <div class="hide" id="">
                         <!-- 添加二级标题 -->
                         <a href="..\..\JavaScript\HTML文件\basic\JavaScript 使用.html" target="view"><h5>JS 使用</h5></a>
-                        <a href="..\..\JavaScript\HTML文件\basic\JavaScript 输出.html" target="view"><h5>JS 使用</h5></a>
-                        <a href="..\..\JavaScript\HTML文件\basic\JavaScript 运算符.html" target="view"><h5>JS 使用</h5></a>
-                        <a href="..\..\JavaScript\HTML文件\basic\JavaScript 数据类型.html" target="view"><h5>JS 使用</h5></a>
+                        <a href="..\..\JavaScript\HTML文件\basic\JavaScript 输出.html" target="view"><h5>JS 输出</h5></a>
+                        <a href="..\..\JavaScript\HTML文件\basic\JavaScript 运算符.html" target="view"><h5>JS 运算符</h5></a>
+                        <a href="..\..\JavaScript\HTML文件\basic\JavaScript 数据类型.html" target="view"><h5>JS 数据类型</h5></a>
                     </div>
                 </li>
             </ul>
