--- a/index/html/education.html
+++ b/index/html/education.html
@@ -88,7 +88,7 @@
                     </h2>
                     <div class="hide" id="">
                         <!-- 添加二级标题 -->
-                        <!-- <a href="..\..\education\HTML文件\中学教学\教学概述.html" target="view"><h5>教学概述</h5></a> -->
+                        <a href="..\..\education\HTML文件\中学生学习心理\认知过程.html" target="view"><h5>认知过程</h5></a>
                         
                     </div>
                 </li>
