--- a/index/index.html
+++ b/index/index.html
@@ -73,6 +73,18 @@
                 </li>
             </ul> -->
 
+            <!-- 算法分析与设计 -->
+            <ul>
+                <li class="nav-list">
+                    <h2>算法分析与设计
+                        <i></i>
+                    </h2>
+                    <div class="hide" id="">
+                        <a href="html\arithmetic.html" target="_self"><h5>算法分析与设计</h5></a>
+                    </div>
+                </li>
+            </ul>
+
 
     </div>
 
