--- a/index/html/arithmetic.html
+++ b/index/html/arithmetic.html
@@ -30,7 +30,8 @@
                     </h2>
                     <div class="hide" id="">
                         <!-- 添加二级标题 -->
-                        <!-- <a href="..\..\JavaScript\HTML文件\basic\JavaScript 使用.html" target="view"><h5>JS 使用</h5></a> -->
+                        <a href="..\..\算法设计与分析\HTML\递归与分治策略\全排列.html" target="view"><h5>全排列</h5></a>
+                        <a href="..\..\算法设计与分析\HTML\递归与分治策略\整数划分.html" target="view"><h5>整数划分</h5></a>
                     </div>
                 </li>
             </ul>
