--- a/index/index.html
+++ b/index/index.html
@@ -35,16 +35,30 @@
                 </li>
             </ul>
 
-            <!-- web 前端 -->
+            <!-- Web 前端 -->
             <ul>
                 <li class="nav-list">
-                    <h2>web 前端
+                    <h2>Web 前端
                         <i></i>
                     </h2>
                     <div class="hide" id="">
                         <!-- <a href="" target="_self"><h5>HTML</h5></a> -->
                         <a href="html\css.html" target="_self"><h5>CSS</h5></a>
                         <a href="html\JavaScript.html" target="_self"><h5>JavaScript</h5></a>
+                    </div>
+                </li>
+            </ul>
+
+             <!--Java Web-->
+             <ul>
+                <li class="nav-list">
+                    <h2>Java Web
+                        <i></i>
+                    </h2>
+                    <div class="hide" id="">
+                        <!-- <a href="" target="_self"><h5>HTML</h5></a> -->
+                        <a href="html\servlet.html" target="_self"><h5>Servlet</h5></a>
+
                     </div>
                 </li>
             </ul>
