--- a/index/html/servlet.html
+++ b/index/html/servlet.html
@@ -25,7 +25,7 @@
             <!-- 添加导航 -->
             <ul>
                 <li class="nav-list">
-                    <h2>Servlet 简介
+                    <h2>Servlet 基础
                         <i></i>
                     </h2>
                     <div class="hide" id="">
