--- a/index/index.html
+++ b/index/index.html
@@ -35,6 +35,18 @@
                 </li>
             </ul>
 
+            <!-- Java -->
+            <ul>
+                <li class="nav-list">
+                    <h2>Java
+                        <i></i>
+                    </h2>
+                    <div class="hide" id="">
+                        <a href="html\Java.html" target="_self"><h5>Python基础</h5></a>
+                    </div>
+                </li>
+            </ul>
+
             <!-- Web 前端 -->
             <ul>
                 <li class="nav-list">
