--- a/index/index.html
+++ b/index/index.html
@@ -42,7 +42,7 @@
                         <i></i>
                     </h2>
                     <div class="hide" id="">
-                        <a href="html\Java.html" target="_self"><h5>Python基础</h5></a>
+                        <a href="html\Java.html" target="_self"><h5>Java</h5></a>
                     </div>
                 </li>
             </ul>
