--- a/index/html/servlet.html
+++ b/index/html/servlet.html
@@ -30,7 +30,7 @@
                     </h2>
                     <div class="hide" id="">
                         <!-- 添加二级标题 -->
-                        <!-- <a href="..\..\JavaScript\HTML文件\basic\JavaScript 使用.html" target="view"><h5>JS 使用</h5></a> -->
+                        <a href="..\..\Servlet\html\Servlet 生命周期.html" target="view"><h5>Servlet 生命周期</h5></a>
                     </div>
                 </li>
             </ul>
