--- a/index/html/arithmetic.html
+++ b/index/html/arithmetic.html
@@ -34,6 +34,7 @@
                         <a href="..\..\算法设计与分析\HTML\递归与分治策略\整数划分.html" target="view"><h5>整数划分</h5></a>
                         <a href="..\..\算法设计与分析\HTML\递归与分治策略\快速排序.html" target="view"><h5>快速排序</h5></a>
                         <a href="..\..\算法设计与分析\HTML\递归与分治策略\合并排序.html" target="view"><h5>合并排序</h5></a>
+                        <a href="..\..\算法设计与分析\HTML\递归与分治策略\循环赛日程表.html" target="view"><h5>循环赛日程表</h5></a>
                     </div>
                 </li>
             </ul>
