--- a/index/html/servlet.html
+++ b/index/html/servlet.html
@@ -31,6 +31,7 @@
                     <div class="hide" id="">
                         <!-- 添加二级标题 -->
                         <a href="..\..\Servlet\html\Servlet 生命周期.html" target="view"><h5>Servlet 生命周期</h5></a>
+                        <a href="..\..\Servlet\html\HttpServletRequest.html" target="view"><h5>HttpServletRequest</h5></a>
                     </div>
                 </li>
             </ul>
