--- a/index/html/arithmetic.html
+++ b/index/html/arithmetic.html
@@ -39,6 +39,19 @@
                 </li>
             </ul>
 
+            <!-- 添加导航 -->
+            <ul>
+                <li class="nav-list">
+                    <h2>动态规划
+                        <i></i>
+                    </h2>
+                    <div class="hide" id="">
+                        <!-- 添加二级标题 -->
+                        <a href="..\..\算法设计与分析\HTML\动态规划\矩阵连乘.html" target="view"><h5>矩阵连乘</h5></a>
+                    </div>
+                </li>
+            </ul>
+
 
     </div>
 
