--- a/index/html/servlet.html
+++ b/index/html/servlet.html
@@ -32,6 +32,7 @@
                         <!-- 添加二级标题 -->
                         <a href="..\..\Servlet\html\Servlet 生命周期.html" target="view"><h5>Servlet 生命周期</h5></a>
                         <a href="..\..\Servlet\html\HttpServletRequest.html" target="view"><h5>HttpServletRequest</h5></a>
+                        <a href="..\..\Servlet\html\HttpServletResponse.html" target="view"><h5>HttpServletResponse</h5></a>
                     </div>
                 </li>
             </ul>
