--- a/index/html/servlet.html
+++ b/index/html/servlet.html
@@ -37,6 +37,34 @@
                 </li>
             </ul>
 
+             <!-- 添加导航 -->
+             <ul>
+                <li class="nav-list">
+                    <h2>Servlet 会话管理
+                        <i></i>
+                    </h2>
+                    <div class="hide" id="">
+                        <!-- 添加二级标题 -->
+                        <a href="..\..\Servlet\html\会话管理基本原理.html" target="view"><h5>会话管理基本原理</h5></a>
+                        <a href="..\..\Servlet\html\HttpSession 会话管理.html" target="view"><h5>HttpSession 会话管理</h5></a>
+                    </div>
+                </li>
+            </ul>
+
+             <!-- 添加导航 -->
+             <ul>
+                <li class="nav-list">
+                    <h2>Servlet 进阶
+                        <i></i>
+                    </h2>
+                    <div class="hide" id="">
+                        <!-- 添加二级标题 -->
+                        <!-- <a href="..\..\Servlet\html\会话管理基本原理.html" target="view"><h5>会话管理基本原理</h5></a>
+                        <a href="..\..\Servlet\html\HttpSession 会话管理.html" target="view"><h5>HttpSession 会话管理</h5></a> -->
+                    </div>
+                </li>
+            </ul>
+
           
 
     </div>
