--- a/index/index.html
+++ b/index/index.html
@@ -70,7 +70,7 @@
                     <div class="hide" id="">
                         <!-- <a href="" target="_self"><h5>HTML</h5></a> -->
                         <a href="html\servlet.html" target="_self"><h5>Servlet</h5></a>
-
+                        <a href="html\JSP.html" target="_self"><h5>JSP</h5></a>
                     </div>
                 </li>
             </ul>
