--- a/index/html/jsp.html
+++ b/index/html/jsp.html
@@ -30,7 +30,7 @@
                     </h2>
                     <div class="hide" id="">
                         <!-- 添加二级标题 -->
-                        <!-- <a href="..\..\Servlet\html\Servlet 生命周期.html" target="view"><h5>Servlet 生命周期</h5></a> -->
+                        <a href="..\..\JSP\html\JSP 元素.html" target="view"><h5>JSP 元素</h5></a>
                     </div>
                 </li>
             </ul>
