--- a/index/html/servlet.html
+++ b/index/html/servlet.html
@@ -59,8 +59,7 @@
                     </h2>
                     <div class="hide" id="">
                         <!-- 添加二级标题 -->
-                        <!-- <a href="..\..\Servlet\html\会话管理基本原理.html" target="view"><h5>会话管理基本原理</h5></a>
-                        <a href="..\..\Servlet\html\HttpSession 会话管理.html" target="view"><h5>HttpSession 会话管理</h5></a> -->
+                        <a href="..\..\Servlet\html\Servlet 进阶 API.html" target="view"><h5>Servlet 进阶 API</h5></a>
                     </div>
                 </li>
             </ul>
